<resources>
    <string name="app_name">sdy61ge4am88200</string>
    <string name="internet">Internet</string>
    <string name="storage_create">Storage(Create)</string>
    <string name="storage_open">Storage(open)</string>
    <string name="storage_save">Storage(save)</string>
    <string name="switch_to_tabs_view">Switch to Tabs View</string>
    <string name="type_your_text_here">Type your text here...</string>
    <string name="editor_titlehint">Your Document\'s Title</string>


    <string name="msg_errconnect">An error occoured while trying to connect.</string>
    <string name="msg_errretrieval">An error occoured while retrieving the file.</string>
    <string name="msg_errsaving">An error occoured while saving.</string>
    <string name="msg_errreading">An error occured while reading the file contents.</string>
    <string name="msg_saved">Successfully saved.</string>
    <string name="title_activity_tabs">TabsActivity</string>
    <!--

    google_maps_key
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    -->
    <string name="google_API_key">This I have deleted</string>
    <string name="google_maps_key">This I have deleted</string>
    <string name="tab_text_1">Map</string>
    <string name="tab_text_2">Register</string>
    <string name="tab_text_3">AR</string>

    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab2txtView">Εγγραφή χρήστη</string>
    <string name="tab2txtView2">Όνομα χρήστη</string>
    <string name="e_mail">E-Mail</string>
    <string name="tab2txtView4">Κωδικός</string>
    <string name="tab2Btn">ΕΓΓΡΑΦΗ</string>
    <string name="tab2imgview2">UserImage</string>
    <string name="type_your_name_here">Type your name here...</string>
    <string name="someone_someplace_com">me@mydomain.com</string>
    <string name="type_your_password_here">type your password here...</string>
    <string name="device_location">ΘΕΣΗ ΣΥΣΚΕΥΗΣ</string>
    <string name="address">Address:</string>
    <string name="speed">Speed:</string>
    <string name="longtitude">Longtitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="accuracy">Accuracy:</string>

</resources>
